--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,10 @@
 name: color_wand
 version: 0.0.1
-description: A simple Dart package exposing a Color class which can be used to create, convert, alter, and compare colors.
+description: A color library which can be used to create, convert, alter, and compare colors to be used in both Flutter and the web.
 authors:
-- Michael Fenwick <mike@mikefenwick.com>
-- Tim Kluge <timklge@wh2.tu-dresden.de>
-homepage: http://github.com/MichaelFenwick/Color
+  - Tobias Marschall <tobias.marschall@online.de>
+homepage: https://github.com/TiO-Design/color_wand
 environment:
   sdk: '>=2.0.0-dev.61.0 <3.0.0'
 dev_dependencies:
   test: ^1.0.0
-  build_runner: ^0.10.0
-  build_test: ^0.10.2
-  build_web_compilers: ^0.4.0
