--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,5 +6,9 @@ authors:
 homepage: https://github.com/tio-design/color_wand
 environment:
   sdk: '>=2.0.0-dev.61.0 <3.0.0'
+
+dependencies:
+  meta: ^1.0.0
+
 dev_dependencies:
   test: ^1.0.0
